Product Design Webpage

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h1 class="service-title">Our Service's</h1>
           <div class="our-service-box-container">
             <div class="service-items">
-              <img src="/icon/icon_1.png" alt="" class="service-icon" />
+              <img src="./icon/icon_1.png" alt="" class="service-icon" />
               <h1>Digital Art</h1>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit
@@ -91,7 +91,7 @@
               <button class="btn service-btn" type="button">Details</button>
             </div>
             <div class="service-items">
-              <img src="/icon/icon_2.png" alt="" class="service-icon" />
+              <img src="./icon/icon_2.png" alt="" class="service-icon" />
               <h1>Digital Art</h1>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit
@@ -102,7 +102,7 @@
               <button class="btn service-btn" type="button">Details</button>
             </div>
             <div class="service-items">
-              <img src="/icon/icon_3.png" alt="" class="service-icon" />
+              <img src="./icon/icon_3.png" alt="" class="service-icon" />
               <h1>Digital Art</h1>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit
